--- a/lab 4/lab_4.ipynb
+++ b/lab 4/lab_4.ipynb
@@ -23,8 +23,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T00:37:52.070593Z",
-     "start_time": "2024-08-23T00:37:36.547360Z"
+     "end_time": "2024-08-26T01:59:47.362601Z",
+     "start_time": "2024-08-26T01:59:47.356085Z"
     }
    },
    "cell_type": "code",
@@ -37,11 +37,15 @@
     "import pathlib\n",
     "import numpy as np\n",
     "import shutil\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ],
    "id": "c3f1617c23cc2c81",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -49,8 +53,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-22T22:16:46.984615Z",
-     "start_time": "2024-08-22T22:13:16.525348Z"
+     "end_time": "2024-08-26T02:23:01.349683Z",
+     "start_time": "2024-08-26T02:05:24.049464Z"
     }
    },
    "source": [
@@ -59,13 +63,13 @@
     "zip_ref.close()"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T22:18:19.836285Z",
-     "start_time": "2024-08-22T22:18:19.240324Z"
+     "end_time": "2024-08-26T02:25:17.911528Z",
+     "start_time": "2024-08-26T02:25:17.013784Z"
     }
    },
    "cell_type": "code",
@@ -96,7 +100,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -414,8 +418,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T05:00:54.334876Z",
-     "start_time": "2024-08-22T05:00:54.331707Z"
+     "end_time": "2024-08-26T02:25:28.201078Z",
+     "start_time": "2024-08-26T02:25:28.195093Z"
     }
    },
    "cell_type": "code",
@@ -436,13 +440,13 @@
    ],
    "id": "4dee55666c92c3c6",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T05:02:18.415948Z",
-     "start_time": "2024-08-22T05:00:55.153193Z"
+     "end_time": "2024-08-26T02:28:03.241518Z",
+     "start_time": "2024-08-26T02:25:30.884807Z"
     }
    },
    "cell_type": "code",
@@ -473,7 +477,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -494,8 +498,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T00:37:52.081728Z",
-     "start_time": "2024-08-23T00:37:52.070593Z"
+     "end_time": "2024-08-26T02:28:03.249884Z",
+     "start_time": "2024-08-26T02:28:03.243510Z"
     }
    },
    "cell_type": "code",
@@ -506,13 +510,13 @@
    ],
    "id": "b5bfd988f5a67cd6",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T22:18:40.852057Z",
-     "start_time": "2024-08-22T22:18:40.831993Z"
+     "end_time": "2024-08-26T02:28:03.273257Z",
+     "start_time": "2024-08-26T02:28:03.251857Z"
     }
    },
    "cell_type": "code",
@@ -525,13 +529,13 @@
    ],
    "id": "bf24a1befd3ffba8",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T22:23:32.758597Z",
-     "start_time": "2024-08-22T22:18:43.836355Z"
+     "end_time": "2024-08-26T02:42:18.648764Z",
+     "start_time": "2024-08-26T02:28:03.275761Z"
     }
    },
    "cell_type": "code",
@@ -552,7 +556,7 @@
    ],
    "id": "d78329f7e8d8477",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -563,8 +567,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-23T00:38:08.101997Z",
-     "start_time": "2024-08-23T00:37:58.981506Z"
+     "end_time": "2024-08-26T02:42:38.030201Z",
+     "start_time": "2024-08-26T02:42:18.650760Z"
     }
    },
    "cell_type": "code",
@@ -607,7 +611,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -1241,11 +1245,64 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "Claramente el mejor modelo es el primer modelo que se realizó, por lo que se utilizará ese para comparar con las redes neuronales simples y el algoritmo diferente a deep learning",
+   "id": "46ae042750033e02"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Modelo que no es deep learning\n",
+    "### Random Forest"
+   ],
+   "id": "afe95f3b9848114d"
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-08-26T02:42:38.032189Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "def load_data(directory):\n",
+    "    data = []\n",
+    "    labels = []\n",
+    "    for label in os.listdir(directory):\n",
+    "        path = os.path.join(directory, label)\n",
+    "        for file in os.listdir(path):\n",
+    "            img_path = os.path.join(path, file)\n",
+    "            img = tf.keras.preprocessing.image.load_img(img_path, target_size=(28, 28))  # Ensure images are 28x28\n",
+    "            img = tf.keras.preprocessing.image.img_to_array(img)\n",
+    "            data.append(img)\n",
+    "            labels.append(int(label))  # Convert label to an integer\n",
+    "    return np.array(data), np.array(labels)\n",
+    "\n",
+    "\n",
+    "train_data, train_labels = load_data(train_dir)\n",
+    "test_data, test_labels = load_data(test_dir)\n",
+    "\n",
+    "train_data = train_data.reshape(len(train_data), -1)\n",
+    "test_data = test_data.reshape(len(test_data), -1)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "train_data = scaler.fit_transform(train_data)\n",
+    "test_data = scaler.transform(test_data)\n",
+    "\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(train_data, train_labels)\n",
+    "\n",
+    "predictions = rf_model.predict(test_data)\n",
+    "accuracy = accuracy_score(test_labels, predictions)\n",
+    "print('Random Forest Accuracy: > %.3f' % (accuracy * 100.0))"
+   ],
+   "id": "9cecd1dce75177a0",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "9cecd1dce75177a0"
+   "execution_count": null
   }
  ],
  "metadata": {
